--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "chat-app",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node server/server.js",
+    "start": "nodemon server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
@@ -13,7 +12,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3"
-  }
+    "express": "^4.16.3",
+    "socket.io": "^2.1.1"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Zmontague/Node-Chat-App.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Zmontague/Node-Chat-App/issues"
+  },
+  "homepage": "https://github.com/Zmontague/Node-Chat-App#readme",
+  "description": ""
 }
-
